[package]
name = "sateater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = "0.20.0"
json = "0.12.4"
serde = "1.0.140"
rand = "0.8.5"
qrcode-generator = "4.1.6"
clightningrpc = "0.2.0"

# https://github.com/Kixunil/tonic_lnd/issues/17
tonic_lnd = { git = "https://github.com/yzernik/tonic_openssl_lnd", rev = "8c7e3a029a33c4c5fbac061658026cac2d1b190e" }
hex = "0.4.3"
configparser = "3.0.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.87"
lettre = { version = "0.10.0-beta.2", default-features = false, features = ["builder"] }
rusoto_core = { version = "0.46", default-features = false, features = ["rustls"] }
rusoto_ses = { version = "0.46", default-features = false, features = ["rustls"] }
base64 = "0.13"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

